--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,23 @@
 --- #YAML:1.0
-name:                App-Rad
-version:             0.5
-abstract:            Rapid (and easy!) creation of command line applications
-license:             ~
-author:              
+name:               App-Rad
+version:            0.6
+abstract:           Rapid (and easy!) creation of command line applications
+author:
     - Breno G. de Oliveira <garu at cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Carp:                          0
-    File::Temp:                    0
-    Getopt::Long:                  2.36
-    Test::More:                    0
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Carp:          0
+    File::Temp:    0
+    Getopt::Long:  2.36
+    Test::More:    0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
