--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               App-Rad
-version:            0.8
+version:            0.9
 abstract:           Rapid (and easy!) creation of command line applications
 author:
     - Breno G. de Oliveira <garu at cpan.org>
@@ -9,10 +9,12 @@ distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    Carp:          0
-    File::Temp:    0
-    Getopt::Long:  2.36
-    Test::More:    0
+    Attribute::Handlers:  0
+    B::Deparse:           0
+    Carp:                 0
+    File::Temp:           0
+    Getopt::Long:         2.36
+    Test::More:           0
 no_index:
     directory:
         - t
