Import of GARU/App-Rad-0.10 from CPAN.
gitpan-cpan-distribution: App-Rad
gitpan-cpan-version:      0.10
gitpan-cpan-path:         GARU/App-Rad-0.10.tar.gz
gitpan-cpan-author:       GARU
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,14 @@
 --- #YAML:1.0
 name:               App-Rad
-version:            0.9
+version:            0.10
 abstract:           Rapid (and easy!) creation of command line applications
 author:
     - Breno G. de Oliveira <garu at cpan.org>
 license:            perl
 distribution_type:  module
 configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     Attribute::Handlers:  0
@@ -19,7 +21,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+generated_by:       ExtUtils::MakeMaker version 6.50
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
