--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               App-Rad
-version:            1.00
+version:            1.01
 abstract:           Rapid (and easy!) creation of command line applications
 author:
     - Breno G. de Oliveira <garu at cpan.org>
@@ -15,6 +15,7 @@ requires:
     B::Deparse:           0
     Carp:                 0
     File::Temp:           0
+    FindBin:              0
     Getopt::Long:         2.36
     Test::More:           0
 no_index:
