--- a/META.yml
+++ b/META.yml
@@ -1,28 +1,28 @@
---- #YAML:1.0
-name:               App-Rad
-version:            1.05_01
-abstract:           Rapid (and easy!) creation of command line applications
+---
+abstract: 'Rapid (and easy!) creation of command line applications'
 author:
-    - Breno G. de Oliveira <garu at cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Breno G. de Oliveira <garu at cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Attribute::Handlers:  0
-    B::Deparse:           0
-    Carp:                 0
-    File::Temp:           0
-    FindBin:              0
-    Getopt::Long:         2.36
-    Test::More:           0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.6501, CPAN::Meta::Converter version 2.120921'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: App-Rad
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Attribute::Handlers: 0
+  B::Deparse: 0
+  Carp: 0
+  File::Temp: 0
+  FindBin: 0
+  Getopt::Long: 2.36
+  Test::More: 0
+version: 1.05
